Add comprehensive boat control system with MQTT communication
- Introduced the PiBoat2 application for autonomous boat control, managing all systems and MQTT communication.
- Implemented a modular architecture with components for command dispatching, status reporting, navigation, and safety monitoring.
- Added configuration management for MQTT and boat settings.
- Included a simulator for testing without hardware and a component tester for individual system validation.
- Updated .gitignore to exclude additional files and directories.
- Removed unnecessary __pycache__ files and Python bytecode files.
- Added example configuration file and updated requirements for new dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
+# Virtual environments
 .venv/
+venv/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Log files
+*.log
+logs/
+*.log.*
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Configuration files with sensitive data
+*_secret.yaml
+*_private.yaml
+*.env
