Add initial Docker setup and configuration for PiBoat2 application
- Introduced Dockerfile, docker-compose.yml, and .dockerignore for containerization of the PiBoat2 application.
- Added example .env file for environment variable configuration.
- Implemented PostgreSQL, Redis, and MQTT services in docker-compose for seamless integration.
- Created initialization SQL script for setting up the database schema.
- Developed startup script for launching the application on the boat device.
- Enhanced configuration management for loading environment variables and application settings.
- Included web interface files for the ground control station.
- Established database models and session management for data persistence.

--- a/config/boat_config.yaml
+++ b/config/boat_config.yaml
@@ -5,9 +5,9 @@ boat:
   name: "PiBoat2 Test Vessel"
   
 mqtt:
-  broker_host: "mqtt.example.com"
-  broker_port: 8883
-  use_tls: true
+  broker_host: "ec2-174-129-132-111.compute-1.amazonaws.com"
+  broker_port: 1883
+  use_tls: false
   keepalive: 60
   qos: 1
   username: "${MQTT_USERNAME}"
